@@ -667,6 +667,26 @@ class ErrorsTests(unittest.TestCase):
                     assert_array_less(0.9,
                                       cvnp[(np.array([0,1]), np.array([1,0]))])
 
+
+def test_confusion_as_node():
+    from mvpa2.misc.data_generators import normal_feature_dataset
+    from mvpa2.clfs.gnb import GNB
+    from mvpa2.clfs.transerror import Confusion
+    ds = normal_feature_dataset(snr=2.0, perlabel=42, nchunks=3,
+                                nonbogus_features=[0,1], nfeatures=2)
+    clf = GNB()
+    cv = CrossValidation(
+        clf, NFoldPartitioner(),
+        errorfx=None,
+        postproc=Confusion(labels=ds.UT),
+        enable_ca=['stats'])
+    res = cv(ds)
+    # needs to be identical to CA
+    assert_array_equal(res.samples, cv.ca.stats.matrix)
+    assert_array_equal(res.sa.predictions, ds.UT)
+    assert_array_equal(res.fa.targets, ds.UT)
+
+
 def suite():
     return unittest.makeSuite(ErrorsTests)
 
